--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#2481cc">
   <meta name="color-scheme" content="light dark">
   <title>Telegram Mini App</title>
+  <!-- Cache buster v1.1 -->
   
   <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
